--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#blogs">Blogs</a></li>
             </ul>
         </div>
@@ -152,7 +153,7 @@
                 </div>
                 <div class="detail">
                     <span>
-                        <h3>Dr. APJ Abdul Kalam Technical University</h3>
+                        <h3 href="">Dr. APJ Abdul Kalam Technical University</h3>
                     </span>
                     <span>
                         <h4>BTech. Computer Science Engineering </h4>
@@ -287,6 +288,16 @@
             </div>
         </div>
     </section>
+
+    <section id="certifications" class="skills">
+        <h2>Certifications</h2>
+        <div>
+            <img src="./mcsa.png" style="width: 211px;" alt="Microsoft Azure Fundamentals">
+            <img src="./MCSA-Certification-300x210.png" alt="Microsoft Azure Fundamentals">
+
+        </div>
+    </section>
+
     <section id="experience" class="experience">
         <div class="experience">
             <h3 style="margin-top: 10%;">My Experience</h3>
@@ -300,20 +311,30 @@
                         </div>
                     </div>
                     <div class="info">
-                        <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
+                        <h4>
+                            <a href="https://adilstore.com/" target="_blank"
+                                style="text-decoration:none; color:inherit;">
+                                IT Support Engineer – AL ADIL TRADING, Dubai, UAE
+                            </a>
+                        </h4>
+
 
                         <ul class="skill-bullets">
-    <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business Central, Zoho ERP, GoFrugal, and custom solutions.</li>
-    <li>Administer virtualized environments using VMware or Hyper-V.</li>
-    <li>Configure and manage network settings, including TCP/IP, VLANs, firewalls, and VPNs.</li>
-    <li>Maintain and support Point of Sale (POS) systems for retail operations.</li>
-    <li>Support cloud platforms such as AWS, Azure, and Google Cloud.</li>
-    <li>Ensure seamless operation of servers, networks, and hardware across all locations.</li>
-    <li>Conduct stock evaluation and inventory counting for efficient stock management.</li>
-    <li>Oversee comprehensive inventory management for all stock categories.</li>
-    <li>Design and execute digital marketing campaigns using Netcore for newsletters and promotional emails.</li>
-    <li>Manage e-commerce store backend, including uploading product offers, images, and descriptions for seamless online retail operations.</li>
-</ul>
+                            <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business
+                                Central, Zoho ERP, GoFrugal, and custom solutions.</li>
+                            <li>Administer virtualized environments using VMware or Hyper-V.</li>
+                            <li>Configure and manage network settings, including TCP/IP, VLANs, firewalls, and VPNs.
+                            </li>
+                            <li>Maintain and support Point of Sale (POS) systems for retail operations.</li>
+                            <li>Support cloud platforms such as AWS, Azure, and Google Cloud.</li>
+                            <li>Ensure seamless operation of servers, networks, and hardware across all locations.</li>
+                            <li>Conduct stock evaluation and inventory counting for efficient stock management.</li>
+                            <li>Oversee comprehensive inventory management for all stock categories.</li>
+                            <li>Design and execute digital marketing campaigns using Netcore for newsletters and
+                                promotional emails.</li>
+                            <li>Manage e-commerce store backend, including uploading product offers, images, and
+                                descriptions for seamless online retail operations.</li>
+                        </ul>
 
                     </div>
                 </div>
@@ -324,7 +345,7 @@
                         </div>
                     </div>
                     <div class="info">
-                        <h4>FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
+                        <h4 href="">FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
                         <ul class="skill-bullets">
                             <li>Implemented responsive UI/UX designs & Functionality.</li>
                             <li>Deployed applications to cloud platforms.</li>
@@ -344,7 +365,7 @@
                         </div>
                     </div>
                     <div class="info">
-                        <h4>IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
+                        <h4 href="">IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
                         <ul class="skill-bullets">
                             <li>Provided technical support and troubleshooting for hardware, software, and network
                                 issues.</li>
@@ -365,7 +386,7 @@
                         </div>
                     </div>
                     <div class="info">
-                        <h4>Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
+                        <h4 href="">Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
                         <ul class="skill-bullets">
                             <li>Employment Assistance for Ex-Servicemen Officers for DGR (Ministry of Defence) Indian
                                 Army.</li>
@@ -383,11 +404,11 @@
 
     </section>
     <div class="contact" id="contact">
-        <div class="container">
+        <div class="container-sm">
             <div class="box">
                 <h3>Contact</h3><br>
                 <!-- -----------------------------------contact from---------------------- -->
-                <div id="contact-form" class="contact-form-section">
+                <div id="contact-form" class="contact-form-section ">
 
                     <form action="https://api.web3forms.com/submit" method="POST">
 
