--- a/index.html
+++ b/index.html
@@ -153,14 +153,31 @@
                 </div>
                 <div class="detail">
                     <span>
-                        <h3 href="">Dr. APJ Abdul Kalam Technical University</h3>
+                        <h3 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="https://aktu.ac.in/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                Dr. APJ Abdul Kalam Technical University
+                            </a>
+                        </h3>
                     </span>
                     <span>
                         <h4>BTech. Computer Science Engineering </h4>
                     </span>
                     <span>
+                        <h6 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="https://mgmnoida.org/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                MGM's College of Engineering & Technology, Noida
+                            </a>
+                            >
+                        </h6>
                         <h6>2016-2020</h6>
                     </span>
+
                 </div>
             </div><br>
             <div class="block2">
@@ -169,17 +186,30 @@
                 </div>
                 <div class="detail">
                     <span>
-                        <h3>Jai Hind Public School</h3>
+                        <h3 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="https://jhpschool.com/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                Jai Hind Public School
+                            </a>
+                        </h3>
                     </span>
                     <span>
-                        <h4>Higher Secondary Education +2</h4>
+                        <h4>Higher Secondary Education</h4>
+                        <h4 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="https://www.cbse.gov.in/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                CBSE
+                            </a>
+                        </h4>
                     </span>
                     <span>
                         <h6>2014-2016 </h6>
                     </span><br>
-                    <span>
-                        <h4>CBSE</h4>
-                    </span>
+
                 </div>
             </div>
         </div>
@@ -292,8 +322,9 @@
     <section id="certifications" class="skills">
         <h2>Certifications</h2>
         <div>
-            <img src="./mcsa.png" style="width: 211px;" alt="Microsoft Azure Fundamentals">
-            <img src="./MCSA-Certification-300x210.png" alt="Microsoft Azure Fundamentals">
+            <img src="./mcsa.png" style="width: 211px;" alt="">
+            <img src="./MCSA-Certification-300x210.png" alt="">
+            <img src="./ccna.png" style="margin-bottom: 57px;" alt="">
 
         </div>
     </section>
@@ -304,16 +335,19 @@
             <div class="list">
                 <div class="list1">
                     <div class="objects">
-                        <div class="obj" data-title="Business Development Associate"
-                            data-type="Gandalf IT Services, Gurgaon">
-                            <img style="width: 100%; height: 138px;" src="./project1.webp"
-                                alt="Gandalf IT Services Logo">
+                        <div class="obj" data-title="" data-type="">
+                            <a href="https://adilstore.com/" target="_blank">
+                                <img src="./project1.webp" alt="AL ADIL TRADING" style="width: 100%; height: 138px;">
+                            </a>
+
                         </div>
                     </div>
                     <div class="info">
-                        <h4>
+                        <h4 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
                             <a href="https://adilstore.com/" target="_blank"
-                                style="text-decoration:none; color:inherit;">
+                                style="text-decoration: none; color: inherit;">
                                 IT Support Engineer – AL ADIL TRADING, Dubai, UAE
                             </a>
                         </h4>
@@ -341,11 +375,20 @@
                 <div class="list2">
                     <div class="objects">
                         <div class="obj" data-title="IT Support Engineer" data-type="Demoooooooooooo">
-                            <img style="width: 100%; height: 276px;" src="./project2.png" alt="Expedia Logo">
+                            <a href="https://www.ednsgroup.com/" target="_blank">
+                                <img src="./project2.png" alt="AL ADIL TRADING" style="width: 100%; height: 276px;">
+                            </a>
                         </div>
                     </div>
                     <div class="info">
-                        <h4 href="">FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
+                        <h4 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="https://www.ednsgroup.com/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                FULL STACK DEVELOPER - DNS GROUP, Delhi, India
+                            </a>
+                        </h4>
                         <ul class="skill-bullets">
                             <li>Implemented responsive UI/UX designs & Functionality.</li>
                             <li>Deployed applications to cloud platforms.</li>
@@ -361,11 +404,22 @@
                 <div class="list3">
                     <div class="objects">
                         <div class="obj" data-title="Full Stack Developer" data-type="Al Adil Supermarket, Dubai">
-                            <img style="width: 100%; height: 319px;" src="./cropped-logo-3-1.png" alt="Al Adil Logo">
+                            <a href="https://transguardgroup.com/" target="_blank">
+                                <img src="./cropped-logo-3-1.png" alt="AL ADIL TRADING"
+                                    style="width: 100%; height: 319px;">
+                            </a>
                         </div>
                     </div>
                     <div class="info">
-                        <h4 href="">IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
+                        <h4 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="https://transguardgroup.com/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE
+                            </a>
+                        </h4>
+
                         <ul class="skill-bullets">
                             <li>Provided technical support and troubleshooting for hardware, software, and network
                                 issues.</li>
@@ -382,11 +436,22 @@
                 <div class="list4">
                     <div class="objects">
                         <div class="obj" data-title="Intern - Web Developer" data-type="XYZ Tech Solutions">
-                            <img src="./createch.png" alt="">
+                            <a href="http://www.createch-software.com/" target="_blank">
+                                <img src="createch.png" alt="AL ADIL TRADING">
+                            </a>
                         </div>
                     </div>
                     <div class="info">
-                        <h4 href="">Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
+                        <h4 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="http://www.createch-software.com/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                Full Stack Developer – CREATECH SOFTWARE PVT. LTD,
+                                Delhi, India
+                            </a>
+                        </h4>
+
                         <ul class="skill-bullets">
                             <li>Employment Assistance for Ex-Servicemen Officers for DGR (Ministry of Defence) Indian
                                 Army.</li>
