--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- Hamburger icon for mobile -->
             <div id="hamburger"><i class="fas fa-bars"></i></div>
             <ul id="nav-links">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#" class="">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -534,17 +534,20 @@
                 <br>
                 <!-- -----------------------------------contact from--------------------------------- -->
                 <div class="text" id="contactme">
-                    <p><i class="fas fa-envelope"></i> nailwalmohit28@gmail.com</p>
+                    <p><i class="fas fa-envelope"></i>
+                        <a href="mailto:nailwalmohit28@gmail.com" class="email-link"
+                            style="font-size: 10px;">nailwalmohit28@gmail.com</a>
+                        </a>
                     <div class="location">
-                        <p><i class="fa fa-location-arrow" aria-hidden="true" style='font-size:20px'></i> Dubai, United
+                        <p><i class="fa fa-location-arrow" aria-hidden="true" style='font-size:15px'></i> Dubai, United
                             Arab Emirates</p>
+
                         <p></p><i class="fa fa-phone" style="font-size:16px"></i> +971-524792549</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <footer>
         <div class="main-footer">
             <p style="text-align:center;">© 2025 Mohit Nailwal. All rights reserved.</p>
