--- a/blogs.html
+++ b/blogs.html
@@ -1,153 +1,306 @@
-<!-- blogs.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mohit's Blogs</title>
-  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link rel="icon" type="image/x-icon" href="./istockphoto-470301340-612x612.jpg">
+  <link rel="stylesheet" type="text/css" href="blogcss.css">
+
 </head>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background-color: #f9f9f9;
-    }
 
-    .navbar {
-      background-color: #222;
-      padding: 15px;
-      color: white;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      margin-right: 15px;
-    }
-
-    .blogs {
-      padding: 50px 20px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .blogs h2 {
-      text-align: center;
-      font-size: 36px;
-      margin-bottom: 40px;
-    }
-
-    .blog-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-      justify-content: center;
-    }
-
-    .blog-card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      width: 300px;
-      overflow: hidden;
-      transition: transform 0.3s ease;
-    }
-
-    .blog-card:hover {
-      transform: translateY(-5px);
-    }
-
-    .blog-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-
-    .blog-card .content {
-      padding: 20px;
-    }
-
-    .blog-card h3 {
-      margin-top: 0;
-      font-size: 22px;
-    }
-
-    .blog-card p {
-      font-size: 14px;
-      color: #555;
-    }
-
-    .read-more {
-      display: inline-block;
-      margin-top: 15px;
-      color: #007BFF;
-      text-decoration: none;
-    }
-
-    .read-more:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #eee;
-      margin-top: 50px;
-    }
-  </style>
 <body>
+  <!-- Navbar -->
   <div class="navbar">
     <div class="container">
       <div class="logo">
-        <a href="index.html"><strong>PORTFOLIO</strong></a>
+        <a href="#" target="_blank"><strong>BLOGS</strong></a>
       </div>
+
+      <div id="hamburger"><i class="fas fa-bars"></i></div>
       <ul id="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#" class="">Home</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#experience">Experience</a></li>
         <li><a href="index.html#contact">Contact</a></li>
         <li><a href="index.html#skills">Skills</a></li>
-        <li><a href="blogs.html" class="active">Blogs</a></li>
+        <li><a href="index.html#certifications">Certifications</a></li>
+        <li><a href="#blogs">Blogs</a></li>
       </ul>
     </div>
   </div>
 
-    <section class="blogs">
-    <h2>My Latest Blogs</h2>
-    <div class="blog-list">
-      <div class="blog-card">
-        <img src="https://images.unsplash.com/photo-1581090700227-1e8a8b2c110c" alt="Full Stack Blog">
-        <div class="content">
-          <h3>Journey into Full Stack Development</h3>
-          <p>How I transitioned from IT support into full-stack development and the challenges I faced.</p>
-          <a class="read-more" href="#">Read More</a>
+  <!-- Header -->
+  <header>
+    <p>Professional IT Support & Infrastructure Solutions for Dubai's Leading Organizations</p>
+  </header>
+
+  <!-- Main Content -->
+  <div class="main-content">
+
+
+    <div class="cards-grid">
+      <!-- Dubai Airport IT Infrastructure -->
+      <div class="project-card">
+        <div class="card-header">
+          <i class="fas fa-plane"></i> Dubai Airport IT Support
+        </div>
+        <div class="card-preview">
+          <img src="https://images.unsplash.com/photo-1436491865332-7a61a109cc05?w=500&h=300&fit=crop"
+            alt="Dubai Airport" />
+        </div>
+        <div class="card-content">
+          <p class="card-description">Comprehensive IT infrastructure management for Dubai International Airport
+            including network monitoring, system maintenance, and 24/7 technical support for critical aviation systems.
+          </p>
+          <div class="card-tags">
+            <span class="tag">Network Admin</span>
+            <span class="tag">System Monitoring</span>
+            <span class="tag">24/7 Support</span>
+            <span class="tag">Aviation Systems</span>
+          </div>
+          <div class="card-footer">
+            <a href="https://www.dubaiairports.ae/" target="_blank" class="btn btn-primary">
+              <i class="fas fa-external-link-alt"></i> Dubai Airports
+            </a>
+            <a href="#" class="btn btn-secondary">
+              <i class="fas fa-info-circle"></i> Project Details
+            </a>
+          </div>
         </div>
       </div>
 
-      <div class="blog-card">
-        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c" alt="Tools Blog">
-        <div class="content">
-          <h3>Top Tools I Use Daily</h3>
-          <p>Explore my favorite developer tools like VS Code, Postman, GitHub Copilot, and more.</p>
-          <a class="read-more" href="#">Read More</a>
+      <!-- Gulf News IT Support System -->
+      <div class="project-card">
+        <div class="card-header">
+          <i class="fas fa-newspaper"></i> Gulf News IT Solutions
+        </div>
+        <div class="card-preview">
+          <img src="https://images.unsplash.com/photo-1586953208448-b95a79798f07?w=500&h=300&fit=crop"
+            alt="Gulf News" />
+        </div>
+        <div class="card-content">
+          <p class="card-description">Digital infrastructure support for Gulf News media operations including server
+            management, database optimization, and content delivery network maintenance.</p>
+          <div class="card-tags">
+            <span class="tag">Server Management</span>
+            <span class="tag">Database Admin</span>
+            <span class="tag">CDN Support</span>
+            <span class="tag">Media Systems</span>
+          </div>
+          <div class="card-footer">
+            <a href="https://gulfnews.com/" target="_blank" class="btn btn-primary">
+              <i class="fas fa-external-link-alt"></i> Gulf News
+            </a>
+            <a href="#" class="btn btn-secondary">
+              <i class="fas fa-code"></i> Technical Stack
+            </a>
+          </div>
         </div>
       </div>
 
-      <div class="blog-card">
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d1" alt="Tips Blog">
-        <div class="content">
-          <h3>Tips for Debugging Like a Pro</h3>
-          <p>Debugging is an art. These tips will help you trace bugs quickly in JS, Node.js, and beyond.</p>
-          <a class="read-more" href="#">Read More</a>
+      <!-- Help Desk Management System -->
+      <div class="project-card">
+        <div class="card-header">
+          <i class="fas fa-headset"></i> IT Help Desk Platform
+        </div>
+        <div class="card-preview">
+          <img src="https://images.unsplash.com/photo-1553877522-43269d4ea984?w=500&h=300&fit=crop" alt="Help Desk" />
+        </div>
+        <div class="card-content">
+          <p class="card-description">Advanced ticketing system with automated routing, SLA monitoring, knowledge base
+            integration, and real-time analytics for IT support operations.</p>
+          <div class="card-tags">
+            <span class="tag">ServiceNow</span>
+            <span class="tag">ITIL Framework</span>
+            <span class="tag">SLA Management</span>
+            <span class="tag">Analytics</span>
+          </div>
+          <div class="card-footer">
+            <a href="#" target="_blank" class="btn btn-primary">
+              <i class="fas fa-external-link-alt"></i> Live Demo
+            </a>
+            <a href="#" class="btn btn-secondary">
+              <i class="fab fa-github"></i> Repository
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Network Monitoring Dashboard -->
+      <div class="project-card">
+        <div class="card-header">
+          <i class="fas fa-network-wired"></i> Network Operations Center
+        </div>
+        <div class="card-preview">
+          <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?w=500&h=300&fit=crop"
+            alt="Network Monitoring" />
+        </div>
+        <div class="card-content">
+          <p class="card-description">Real-time network monitoring solution with automated alerting, performance
+            analytics, and predictive maintenance capabilities for enterprise infrastructure.</p>
+          <div class="card-tags">
+            <span class="tag">PRTG</span>
+            <span class="tag">Nagios</span>
+            <span class="tag">SNMP</span>
+            <span class="tag">Automation</span>
+          </div>
+          <div class="card-footer">
+            <a href="#" target="_blank" class="btn btn-primary">
+              <i class="fas fa-external-link-alt"></i> Dashboard
+            </a>
+            <a href="#" class="btn btn-secondary">
+              <i class="fas fa-chart-line"></i> Analytics
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Cloud Migration Project -->
+      <div class="project-card">
+        <div class="card-header">
+          <i class="fas fa-cloud"></i> Cloud Migration Support
+        </div>
+        <div class="card-preview">
+          <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500&h=300&fit=crop"
+            alt="Cloud Migration" />
+        </div>
+        <div class="card-content">
+          <p class="card-description">End-to-end cloud migration support including assessment, planning, execution, and
+            post-migration optimization for enterprise applications and data.</p>
+          <div class="card-tags">
+            <span class="tag">AWS</span>
+            <span class="tag">Azure</span>
+            <span class="tag">Migration Tools</span>
+            <span class="tag">Security</span>
+          </div>
+          <div class="card-footer">
+            <a href="#" target="_blank" class="btn btn-primary">
+              <i class="fas fa-external-link-alt"></i> Case Study
+            </a>
+            <a href="#" class="btn btn-secondary">
+              <i class="fas fa-download"></i> White Paper
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Remote Support Solution -->
+      <div class="project-card">
+        <div class="card-header">
+          <i class="fas fa-remote-desktop"></i> Remote IT Support
+        </div>
+        <div class="card-preview">
+          <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?w=500&h=300&fit=crop"
+            alt="Remote Support" />
+        </div>
+        <div class="card-content">
+          <p class="card-description">Secure remote access solution enabling IT support teams to troubleshoot, maintain,
+            and update systems across multiple locations with enhanced security protocols.</p>
+          <div class="card-tags">
+            <span class="tag">TeamViewer</span>
+            <span class="tag">VPN</span>
+            <span class="tag">Security</span>
+            <span class="tag">Multi-platform</span>
+          </div>
+          <div class="card-footer">
+            <a href="#" target="_blank" class="btn btn-primary">
+              <i class="fas fa-external-link-alt"></i> Solution Demo
+            </a>
+            <a href="#" class="btn btn-secondary">
+              <i class="fas fa-shield-alt"></i> Security Info
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
+  <!-- Footer -->
   <footer>
-    <p style="text-align:center;">© 2025 Mohit Nailwal. All rights reserved.</p>
+    <div class="main-footer">
+      <p style="text-align:center;">© 2025 Mohit Nailwal. All rights reserved.</p>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/nailwalmohit/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/positve_electron/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://x.com/Mohitnailwal1" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/MohitNailwal" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="tel:+91 6380657002"><i class="fa fa-phone"></i></a>
+        <a href="mailto:nailwalmohit28@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+      </div>
+    </div>
   </footer>
+
+  <script>
+    // Mobile menu toggle
+    document.getElementById('hamburger').addEventListener('click', function () {
+      const navLinks = document.getElementById('nav-links');
+      navLinks.classList.toggle('active');
+    });
+
+    // Smooth scrolling for anchor links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+          target.scrollIntoView({
+            behavior: 'smooth',
+            block: 'start'
+          });
+        }
+      });
+    });
+
+    // Card hover effects
+    document.querySelectorAll('.project-card').forEach(card => {
+      card.addEventListener('mouseenter', function () {
+        this.style.transform = 'translateY(-10px) scale(1.02)';
+      });
+
+      card.addEventListener('mouseleave', function () {
+        this.style.transform = 'translateY(0) scale(1)';
+      });
+    });
+
+    // Intersection Observer for animations
+    const observerOptions = {
+      threshold: 0.1,
+      rootMargin: '0px 0px -50px 0px'
+    };
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.style.opacity = '1';
+          entry.target.style.transform = 'translateY(0)';
+        }
+      });
+    }, observerOptions);
+
+    // Animate cards on scroll
+    document.querySelectorAll('.project-card').forEach((card, index) => {
+      card.style.opacity = '0';
+      card.style.transform = 'translateY(50px)';
+      card.style.transition = `all 0.6s ease ${index * 0.1}s`;
+      observer.observe(card);
+    });
+
+    // Add loading states for external links
+    document.querySelectorAll('.btn-primary').forEach(btn => {
+      btn.addEventListener('click', function (e) {
+        if (this.href && this.href.includes('http')) {
+          const originalText = this.innerHTML;
+          this.innerHTML = '<div class="loading"></div> Loading...';
+          setTimeout(() => {
+            this.innerHTML = originalText;
+          }, 2000);
+        }
+      });
+    });
+  </script>
 </body>
+
 </html>
