--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
         </div>
     </div>
     <div class="header">
+        <div class="video-background">
+            <video autoplay muted loop playsinline>
+                <source src="./5453622-uhd_3840_2160_24fps.mp4" type="video/mp4">
+            </video>
+        </div>
         <div class="box">
+          
             <div class="details">
                 <div class="details">
                     <!-- Typing text container -->
