--- a/blogs.html
+++ b/blogs.html
@@ -31,6 +31,13 @@
       </ul>
     </div>
   </div>
+  <div class="video-background">
+    <video autoplay muted loop playsinline>
+      <source src="./10130349-hd_1920_1080_30fps (2).mp4" type="video/mp4">
+    </video>
+  </div>
+  <div class="video-overlay"></div>
+
 
   <!-- Header -->
   <header>
