--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <a href="#" id="backToTopBtn" title="Go to top">
     <i class="fas fa-arrow-up"></i>
 </a>
+
+<script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js"
+    defer>690c9458ff158e4215536bf8, 690c89626841e4d6c5ec5ae0</script>
 
 <body>
     <div class="navbar">
@@ -52,7 +56,7 @@
             </video>
         </div>
         <div class="box">
-          
+
             <div class="details">
                 <div class="details">
                     <!-- Typing text container -->
@@ -122,6 +126,7 @@
         </div>
     </div>
     <br>
+
     <section id="about" class="about">
         <div class="title">
             <h2>About me</h2>
@@ -503,6 +508,9 @@
                 </div>
             </div>
             <br>
+
+
+
             <!-- whatsapp and mobile icon  -->
             <div>
                 <a href="https://wa.me/971524792549" target="_blank" style="
@@ -581,8 +589,9 @@
             </div>
         </div>
     </footer>
+
+    <!-- script for automate text writing------ -->
     <script>
-        // script for automate text writing------
         const hamburger = document.getElementById('hamburger');
         const navLinks = document.getElementById('nav-links');
 
@@ -598,7 +607,7 @@
                 navLinks.classList.remove('active');
             });
         });
-        //  script for scroll up button
+        // script for scroll up button
         const backToTopBtn = document.getElementById("backToTopBtn");
 
         window.onscroll = () => {
@@ -636,7 +645,7 @@
                 html.setAttribute('data-theme', newTheme);
                 localStorage.setItem('theme', newTheme);
             });
-        }); 
+        });
     </script>
 </body>
 
