--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
     <i class="fas fa-arrow-up"></i>
 </a>
 
-<script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js"
-    defer>690c8be500b1bf06a4939a1a, 690c89626841e4d6c5ec5ae0, agent</script>
+<!-- BotPenguin Chatbot -->
+<script id="botpenguin-widget" src="https://cdn.botpenguin.com/website-bot.js" data-bot-id="690c8be500b1bf06a4939a1a"
+    defer>
+    </script>
+
+</body>
+
+</html>
 
 <body>
     <div class="navbar">
