--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 </a>
 
 <!-- BotPenguin Chatbot -->
-<script id="botpenguin-widget" src="https://cdn.botpenguin.com/website-bot.js" data-bot-id="690c8be500b1bf06a4939a1a"
-    defer>
-    </script>
+<script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js"
+    defer>690c8be500b1bf06a4939a1a, 690c89626841e4d6c5ec5ae0, agent</script>
+
+<!-- https://page.botpenguin.com/690c8be500b1bf06a4939a1a/690c89626841e4d6c5ec5ae0/agent -->
 
 </body>
 
