--- a/index.html
+++ b/index.html
@@ -17,20 +17,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+
 </head>
 <a href="#" id="backToTopBtn" title="Go to top">
     <i class="fas fa-arrow-up"></i>
 </a>
-
-<!-- BotPenguin Chatbot -->
 <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js"
     defer>690c8be500b1bf06a4939a1a, 690c89626841e4d6c5ec5ae0, agent</script>
 
-<!-- https://page.botpenguin.com/690c8be500b1bf06a4939a1a/690c89626841e4d6c5ec5ae0/agent -->
-
-</body>
-
-</html>
 
 <body>
     <div class="navbar">
@@ -151,7 +145,7 @@
                 I am passionate about leveraging my dual expertise to enhance system performance, optimize
                 workflows, and deliver innovative IT solutions that meet business needs.
             </p>
-            <p><br>
+            <p>
                 Throughout my career, I have successfully supported diverse industries, including aviation, retail, and
                 manufacturing, particularly within the Dubai market. My ability to adapt quickly to new technologies and
                 environments has enabled me to streamline IT processes, reduce downtime, and improve user satisfaction.
@@ -282,6 +276,9 @@
             </div>
             <div class="skill"><i class="fas fa-database" style="color:#f29111;"></i>
                 <p>MySQL</p>
+            </div>
+            <div class="skill"><i class="fas fa-database" style="color:#e21c0e;"></i>
+                <p>Oracle</p>
             </div>
             <div class="skill"><i class="fab fa-python" style="color:#306998;"></i>
                 <p>Python</p>
@@ -656,6 +653,8 @@
             });
         });
     </script>
+    <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js"
+        defer>690c8be500b1bf06a4939a1a, 690c89626841e4d6c5ec5ae0, agent</script>
 </body>
 
 </html>
