--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-
+    <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/11/09/08/20251109081515-R6EGTAMZ.js" defer></script>
 </head>
 <a href="#" id="backToTopBtn" title="Go to top">
     <i class="fas fa-arrow-up"></i>
 </a>
-<script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js"
-    defer>690c8be500b1bf06a4939a1a, 690c89626841e4d6c5ec5ae0, agent</script>
 
 
 <body>
+    <iframe src="https://emb.fouita.com/widget/0x34315b/ftjbtmzxq" title="AI Mohit Chatbot" width="100%" height="500"
+        frameborder="0">
+    </iframe>
     <div class="navbar">
         <div class="container">
             <div class="logo">
@@ -655,7 +657,5 @@
     </script>
 
 </body>
-<script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js"
-    defer>690c8be500b1bf06a4939a1a, 690c89626841e4d6c5ec5ae0, agent</script>
 
 </html>
