--- a/index.html
+++ b/index.html
@@ -347,6 +347,39 @@
         <div class="experience">
             <h3 style="margin-top: 10%;">My Experience</h3>
             <div class="list">
+                 <div class="list1">
+                    <div class="objects">
+                        <div class="obj" data-title="" data-type="">
+                            <a href="https://www.alpha.ae/" target="_blank">
+                                <img src="./alpha_data_2_logo.jfif" alt="Alpha Data PJSC" style="width: 100%; height: 138px;">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h4 style="display: inline-block; text-decoration: none; cursor: pointer; "
+                            onmouseover="this.style.textDecoration='underline';"
+                            onmouseout="this.style.textDecoration='none';">
+                            <a href="https://www.alpha.ae/" target="_blank"
+                                style="text-decoration: none; color: inherit;">
+                                Application Support Engineer – Alpha Data PJSC, Dubai, UAE
+                            </a>
+                        </h4>
+
+
+                        <ul class="skill-bullets">
+                            <li>Monitor airport operational systems such as Flight Information Display Systems (FIDS), Airport Operational Database (AODB), Baggage Handling Systems (BHS) software, and Passenger Processing Systems.</li>
+                            <li>Respond to application issues raised by airport staff, operations team, and stakeholders.</li>
+                            <li>Troubleshoot application errors, analyze root causes, and escalate to vendors when required.
+                            </li>
+                            <li>Maintain incident logs and ensure timely resolution based on SLAs.</li>
+                            <li>Support configuration changes, software updates, and patches for operational systems.</li>
+                            <li>Maintain detailed SOPs, user guides, technical documentation, and change management records.</li>
+                            <li>Provide on-call or shift-based support to maintain high system availability.</li>
+                            <li>Ensure smooth functioning of all airport applications during peak operations.</li>
+                        </ul>
+
+                    </div>
+                </div>
                 <div class="list1">
                     <div class="objects">
                         <div class="obj" data-title="" data-type="">
