--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <div id="hamburger"><i class="fas fa-bars"></i></div>
             <ul id="nav-links">
                 <li><a href="#" class="">Home</a></li>
-                <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#blogs">Blogs</a></li>
             </ul>
         </div>
@@ -361,7 +361,7 @@
                             onmouseout="this.style.textDecoration='none';">
                             <a href="https://www.alpha.ae/" target="_blank"
                                 style="text-decoration: none; color: inherit;">
-                                Application Support Engineer – Alpha Data PJSC, Dubai, UAE
+                                Application Support Engineer - Alpha Data PJSC, Sharjah, UAE
                             </a>
                         </h4>
 
