--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                  <div class="list1">
                     <div class="objects">
                         <div class="obj" data-title="" data-type="">
-                            <a href="https://www.alpha.ae/" target="_blank">
-                                <img src="./alpha_data_2_logo.jfif" alt="Alpha Data PJSC" style="width: 100%; height: 138px;">
+                            <a href="https://www.sharjahairport.ae/en/" target="_blank">
+                                <img src="./Sharjah_Airport_logo.svg.png" alt="Sharjah Airport" style="width: 100%; height: 138px;">
                             </a>
                         </div>
                     </div>
@@ -359,13 +359,11 @@
                         <h4 style="display: inline-block; text-decoration: none; cursor: pointer; "
                             onmouseover="this.style.textDecoration='underline';"
                             onmouseout="this.style.textDecoration='none';">
-                            <a href="https://www.alpha.ae/" target="_blank"
+                            <a href="https://www.sharjahairport.ae/en/" target="_blank"
                                 style="text-decoration: none; color: inherit;">
-                                Application Support Engineer - Alpha Data PJSC, Sharjah, UAE
+                                Application Support Engineer - Sharjah Airport, UAE
                             </a>
                         </h4>
-
-
                         <ul class="skill-bullets">
                             <li>Monitor airport operational systems such as Flight Information Display Systems (FIDS), Airport Operational Database (AODB), Baggage Handling Systems (BHS) software, and Passenger Processing Systems.</li>
                             <li>Respond to application issues raised by airport staff, operations team, and stakeholders.</li>
@@ -398,7 +396,6 @@
                                 IT Support Engineer – AL ADIL TRADING, Dubai, UAE
                             </a>
                         </h4>
-
 
                         <ul class="skill-bullets">
                             <li>Support and manage Retail ERP systems, including Microsoft Dynamics GP, Business
